# Raytracer

./: .gitignore  CMakeLists.txt
run/: const.glsl  main.frag  main.vert  random.glsl  screenShader.frag
src/: main.cpp  window.cpp  window.hpp
src/glad/: glad.c  glad.h
src/imgui/: imGuiManager.cpp  imGuiManager.hpp
src/rendering/: camera.cpp  camera.hpp  gladManager.cpp  gladManager.hpp  shader.cpp  shader.hpp
